--- a/recovery/init.recovery.qcom.rc
+++ b/recovery/init.recovery.qcom.rc
@@ -1,2 +1,6 @@
 import /init.recovery.qcom.power.rc
 import /init.recovery.qcom.usb.rc
+
+on fs
+    wait /dev/block/platform/soc.0/${ro.boot.bootdevice}
+    symlink /dev/block/platform/soc.0/${ro.boot.bootdevice} /dev/block/bootdevice
