--- a/configs/init/loc_launcher.rc
+++ b/configs/init/loc_launcher.rc
@@ -3,4 +3,4 @@
 service loc_launcher /system/bin/loc_launcher
     #loc_launcher will start as root and set its uid to gps
     class late_start
-    group gps inet net_raw qcom_diag net_admin wifi
+    group gps inet net_raw vendor_qti_diag net_admin wifi
